; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_cache.c_LCAllocNoInvalidate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_cache.c_LCAllocNoInvalidate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LCAllocNoInvalidate(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = ashr i32 %8, 5
  store i32 %9, i32* %6, align 4
  %10 = call i32 @mfspr(i32 920)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = and i32 %11, 268435456
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %20, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @_CPU_ISR_Disable(i32 %15)
  %17 = call i32 (...) @__LCEnable()
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @_CPU_ISR_Restore(i32 %18)
  br label %20

20:                                               ; preds = %14, %2
  %21 = load i32, i32* @FALSE, align 4
  %22 = load i8*, i8** %3, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @LCAllocTags(i32 %21, i8* %22, i32 %23)
  ret void
}

declare dso_local i32 @mfspr(i32) #1

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @__LCEnable(...) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1

declare dso_local i32 @LCAllocTags(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
